
add_executable(mlir-pass-profiler mlir-pass-profiler.cpp)
llvm_update_compile_flags(mlir-pass-profiler)
target_link_libraries(mlir-pass-profiler PUBLIC ${LIBS}  utility runner mlir-support runtime)
set_target_properties(mlir-pass-profiler PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
if(ENABLE_PYTHON STREQUAL "CPYTHON")
    target_link_libraries(mlir-pass-profiler PRIVATE python3.14)
    target_link_directories(mlir-pass-profiler PRIVATE ${PY_HOME}/lib)
    target_compile_definitions(mlir-pass-profiler PRIVATE USE_CPYTHON_RUNTIME=1)
endif()